SigmaCodebackup3rdSep/objects/Damaged_Products_MR__c.object
<CustomObject>
    <fields>
        <fullName>Damaged_Qty__c</fullName>
        <label>Damaged Qty</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Inventory_Location__c</referenceTo>
        <relationshipLabel>Damaged Products MRs</relationshipLabel>
        <relationshipName>Damaged_Products_MRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Run__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturing Run</label>
        <referenceTo>Manufacturing_Run__c</referenceTo>
        <relationshipLabel>Damaged Products MRs</relationshipLabel>
        <relationshipName>Damaged_Products_MRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Damaged Products MR</label>
    <nameField>
        <displayFormat>DPMR-{0000}</displayFormat>
        <label>Damaged Products MR Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Damaged Products MRs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>